--- a/src/App.css
+++ b/src/App.css
@@ -92,11 +92,16 @@ body {
 .component-signInContainer {
   z-index: 3;
   opacity: 1;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .component-signUpContainer {
   z-index: 2;
   opacity: 1;
   height: 100%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
